--- a/data/us.yaml
+++ b/data/us.yaml
@@ -54,10 +54,10 @@ months:
     regions: [us]
     mday: 11
     observed: to_weekday_if_weekend
-  - name: Day Before Thanksgiving
+  - name: Day After Thanksgiving
     week: 4
     regions: [us]
-    wday: 3 
+    wday: 5 
   - name: Thanksgiving
     week: 4
     regions: [us]
@@ -73,7 +73,7 @@ months:
     observed: to_weekday_if_weekend
   - name: New Years Eve
     regions: [us]
-    mday: 24
+    mday: 31
     observed: to_weekday_if_weekend      
 methods:
   us_inauguration_day: |
@@ -91,10 +91,10 @@ tests: |
      Date.civil(2008,9,1) => 'Labor Day',
      Date.civil(2008,10,13) => 'Columbus Day',
      Date.civil(2008,11,11) => 'Veterans Day',
-     Date.civil(2008,11,26) => 'Day Before Thanksgiving',
+     Date.civil(2008,11,28) => 'Day After Thanksgiving',
      Date.civil(2008,11,27) => 'Thanksgiving',
      Date.civil(2008,12,25) => 'Christmas Day',
-     Date.civil(2008,12,31) => 'New Years Eye',     
+     Date.civil(2008,12,31) => 'New Years Eve',     
      Date.civil(2008,12,24) => 'Christmas Eve'}.each do |date, name|
       assert_equal name, (Holidays.on(date, :us)[0] || {})[:name]
     end
