fix day after thanksgiving

--- a/data/us.yaml
+++ b/data/us.yaml
@@ -53,10 +53,9 @@ months:
     regions: [us]
     mday: 11
     observed: to_weekday_if_weekend
-  - name: Day After Thanksgiving
-    week: 4
+  - name: Day after Thanksgiving
+    function: day_after_thanksgiving(year)
     regions: [us]
-    wday: 5 
   - name: Thanksgiving
     week: 4
     regions: [us]
@@ -80,6 +79,10 @@ methods:
     def self.us_inauguration_day(year)
       year % 4 == 1 ? 20 : nil
     end
+  day_after_thanksgiving: |
+    def self.day_after_thanksgiving(year)
+      Date.civil(year,11,Date.calculate_mday(year,11,:fourth,:thursday)+1)
+    end
 tests: |
     {Date.civil(2008,1,1) => 'New Year\'s Day',
      Date.civil(2008,1,21) => 'Martin Luther King, Jr. Day',
@@ -90,8 +93,10 @@ tests: |
      Date.civil(2008,9,1) => 'Labor Day',
      Date.civil(2008,10,13) => 'Columbus Day',
      Date.civil(2008,11,11) => 'Veterans Day',
-     Date.civil(2008,11,28) => 'Day After Thanksgiving',
-     Date.civil(2008,11,27) => 'Thanksgiving',
+     Date.civil(2008,11,28) => 'Day after Thanksgiving'}.each do |date, name|
+      assert_equal name, (Holidays.on(date, :us)[0] || {})[:name]
+     end
+     Date.civil(2013,11,28) => 'Thanksgiving',
      Date.civil(2008,12,25) => 'Christmas Day',
      Date.civil(2008,12,31) => 'New Years Eve',
      Date.civil(2008,12,24) => 'Christmas Eve'}.each do |date, name|
